# artgpn

./: README.md  pyproject.toml  requirements.txt  setup.py
artgpn/: __init__.py  art.py  arttwo.py  mean.py  node.py  utils.py  weight.py
examples/: README.md  __init__.py
examples/CoRoT-7/: arttwo_exemple.py  corot7_data.rdb  corot7_example.py
examples/Sun/: 01_emcee.py  02_results.py  priors.py  sun50points.txt
gpyrn/: __init__.py  gprn.py  meanFunction.py  nodeFunction.py  utils.py  weightFunction.py
src/: __init__.py
src/artgpn/: __init__.py  art.py  arttwo.py  node.py
tests/: __init__.py
